# goodbye-world-backend

./: .gitignore  NOTES.md  README.md  TODO.md
aws-bedrock/: bedrock-mapper.py  check-bedrock-models.py
aws-brain/: README.md  deploy_lambda.py  lambda_handler.py  local_test.py  main.py  package.json  requirements.txt  serverless.yml  test_lambda.py
aws-mongodb/: PROMPTS.md  README.md  backup.py  check_bedrock_models.py  check_db.py  deploy_lambda.py  lambda_handler.py  local_test.py  main.py  mongodb_mcp_server.py  package.json  serverless.yml  (+1 more)
textract-full/: README.md  api.py  deploy_lambda.py  lambda_handler.py  local_test.py  pyproject.toml  requirements.txt  serverless.yml  test_api.html  test_auto_detection.py  test_lambda.py
textract-full/docs/: DEVELOPMENT.md  EXAMPLES.md  QUICK_REFERENCE.md
textract-full/log/licence_20250917_162128/: queries.json  tables.json
textract-full/log/tmpacav62b6_20250917_174904/: forms.json
textract-full/output/: licence_20250917_162734.json  tmpaongb6je_20250917_181018.json
textract-full/src/: __init__.py  bedrock_mapper.py  blur_detection.py  category_detector.py  logger.py  main.py  sample_api_output.json  textract_enhanced.py
textract-full/src/prompts/: bank-receipt-sample.txt  idcard-sample.txt  license-back.txt  license-front.txt  license.txt  license2.txt  passport-sample.txt  receipt-sample.txt  receipt.txt  tnb.txt
textract-full/src/queries/: idcard-sample.txt  idcard.txt  licence.txt  license-back.txt  license-front.txt  license2.txt  passport-sample.txt  receipt-sample.txt  receipt.txt  tnb.txt
(+99 files in other folders)
