[project]
name = "textract-full"
version = "0.1.0"
description = "Combined Textract, Bedrock, and Blur Detection CLI"
requires-python = ">=3.8"
dependencies = [
    "boto3",
    "botocore",
    "opencv-python",
    "numpy",
    "PyPDF2",
    "requests", # For testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
textract-full = "src.main:main"
